# winding

./: .clang-format  .gitignore  CMakeLists.txt
reference/: leg.txt  vase-bump.txt  vase-divot-deep.txt  vase-divot.txt  vase-new.txt  vase.txt
src/: BSpline.cpp  BSpline.h  Composer.cpp  Composer.h  ComposerNew.h  Config.cpp  Config.h  Simulator.cpp  Simulator.h  Surface.cpp  Surface.h  SurfaceEditor.cpp  SurfaceEditor.h  ThreadPool.h  Timer.cpp  Timer.h  main.cpp  utils.cpp  utils.h
src/BVH/: BVH.cpp  BVH.h  Morton.h
src/Surfaces/: BSpline.cpp  BSpline.h  Hyperboloid.cpp  Spring.cpp  Surface.cpp  Surface.h  Torus.cpp  TrefoilKnot.cpp  Vase.cpp
visualize-py/: cube.py  hyperboloid.txt  main.py  main3d.py  mapping1.py  mapping2.py  section.py  spring.txt  torus.txt  vase.txt
