CMAKE_MINIMUM_REQUIRED(VERSION 3.28)

PROJECT(winding)

FILE(GLOB_RECURSE SOURCES "./src/*.cpp")
FILE(GLOB_RECURSE HEADERS "./src/*.h")

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${SOURCES} ${HEADERS})
SET(EIGEN3_INCLUDE_DIR "./lib/eigen-3.4.0")

# Mark Eigen as SYSTEM to suppress warnings from using it.
INCLUDE_DIRECTORIES(SYSTEM ${EIGEN3_INCLUDE_DIR})

SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME} PROPERTIES CXX_STANDARD 23)
SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")
