CMAKE_MINIMUM_REQUIRED(VERSION 3.28)

PROJECT(winding)

# ADD_SUBDIRECTORY(extern/pybind11)

FILE(GLOB_RECURSE SOURCES "./src/*.cpp")
FILE(GLOB_RECURSE HEADERS "./src/*.h")
# pybind11_add_module(${CMAKE_PROJECT_NAME} ${SOURCES} ${HEADERS})

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${SOURCES} ${HEADERS})

SET(USE_QPMAD TRUE)

IF(USE_QPMAD)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUSE_QPMAD")
ELSE()
    SET(ENABLE_OSQP TRUE)
    ADD_SUBDIRECTORY("./lib/Epigraph")
    TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} epigraph)
ENDIF()

# Mark as SYSTEM to suppress warnings from using it.
SET(EIGEN3_INCLUDE_DIR "./lib/eigen-3.4.0")
SET(QPMAD_INCLUDE_DIR "./lib/qpmad/include")
INCLUDE_DIRECTORIES(SYSTEM ${EIGEN3_INCLUDE_DIR} ${QPMAD_INCLUDE_DIR})

SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME} PROPERTIES CXX_STANDARD 23)
SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -DSTANDALONE")
SET(CMAKE_BUILD_TYPE RELEASE)
SET(CMAKE_CXX_FLAGS_RELEASE "-O3")