CMAKE_MINIMUM_REQUIRED(VERSION 3.28)

PROJECT(winding)

FILE(GLOB_RECURSE SOURCES "./src/*.cpp")
FILE(GLOB_RECURSE HEADERS "./src/*.h")

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${SOURCES} ${HEADERS})

SET(USE_QPMAD TRUE)

IF(USE_QPMAD)
    SET(QPMAD_INCLUDE_DIR "./lib/qpmad/include")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUSE_QPMAD")
    INCLUDE_DIRECTORIES(SYSTEM ${QPMAD_INCLUDE_DIR})
ELSE()
    SET(ENABLE_OSQP TRUE)
    ADD_SUBDIRECTORY("./lib/Epigraph")
    TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} epigraph)
ENDIF()

# Mark as SYSTEM to suppress warnings from using it.
SET(EIGEN3_INCLUDE_DIR "./lib/eigen-3.4.0")
INCLUDE_DIRECTORIES(SYSTEM ${EIGEN3_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)

ADD_DEFINITIONS(-std=c++23)

SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME} PROPERTIES CXX_STANDARD 23)
SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -DSTANDALONE")
SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_CXX_FLAGS_RELEASE "-O3")
SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")